--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+        </style>
         <title>ShoeStore</title>
+
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
