--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="./imagens/logo-color.png" alt="logo" >
             <div class="talvez">
             <a href=""><h1>TODOS OS PRODUTOS</h1></a>
-            <a href=""><h1>COLEÇOÊS</h1></a>
+            <a href=""><h1>COLEÇÔES</h1></a>
             <a href=""><h1>OUTLET</h1></a>
             </div>
 
