--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
         </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>ShoeStore</title>
 
         <link rel="stylesheet" href="./index.css">
@@ -10,11 +11,11 @@
     <body>
         <header>
             <img src="./imagens/logo-color.png" alt="logo" >
-            <div class="talvez">
+            <nav class="talvez">
             <a href=""><h1>TODOS OS PRODUTOS</h1></a>
             <a href=""><h1>COLEÇÔES</h1></a>
             <a href=""><h1>OUTLET</h1></a>
-            </div>
+            </nav>
 
         </header>
 
@@ -52,12 +53,12 @@
                     </a></div>
                 </div>
                 <div class="corpo2">
-                <h2 class="teste">SANDÁLIA PALMILHA <br /> MATELASSÊ TIRAS ROLOTÊ</h1>
-                <div>
+                    <h2 class="teste">SANDÁLIA PALMILHA <br /> MATELASSÊ TIRAS ROLOTÊ</h1>
+                    <div>
                     <a class="testelink" href="">ver detalhes</a>
-                </div>
-                <img src="./imagens/photoshoot-3.png" alt="">
-                <img src="./imagens/photoshoot-4.png" alt="">
+                    </div>
+                    <img src="./imagens/photoshoot-3.png" alt="">
+                    <img src="./imagens/photoshoot-4.png" alt="">
                 </div>
     
 
