reajustando tamanhos mobile first

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <header>
         <img src="./imagens/logo-color.png" alt="logo" >
             <nav class="menu">
-                <a href=""><h1>TODOS OS PRODUTOS</h1></a>
-                <a href=""><h1>COLEÇÔES</h1></a>
-                <a href=""><h1>OUTLET</h1></a>
+                <button>botão</button>
+                
             </nav>
 
         </header>
