--- a/versão antiga/index.html
+++ b/versão antiga/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <img src="./imagens/logo-color.png" alt="logo" >
+            <img src="../imagens/logo-color.png" alt="logo" >
             <nav class="talvez">
                 <a href=""><h1>TODOS OS PRODUTOS</h1></a>
                 <a href=""><h1>COLEÇÔES</h1></a>
@@ -23,40 +23,40 @@
 
         </header>
         <main>
-              <img class="banner" src="./imagens/banner.png" alt="">
+              <img class="banner" src="../imagens/banner.png" alt="">
 
               <h1 style="font-size: 400%"> encontre seu estilo </h1>
             
               <div class="corpo">
-                    <img src="./imagens/photoshoot-1.png" alt="">
+                    <img src="../imagens/photoshoot-1.png" alt="">
 
-                    <img src="./imagens/photoshoot-2.png" alt="">
+                    <img src="../imagens/photoshoot-2.png" alt="">
               </div>
               <h1 class="titulo">30% OFF</h1>
               <div class="offer">
                     <div class="sapato1">
-                        <a href="./imagens/shoes1.png">
-                        <img src="./imagens/shoes1.png" alt="">
+                        <a href="../imagens/shoes1.png">
+                        <img src="../imagens/shoes1.png" alt="">
                         <section class="t1">
                         <p><h4>SCARPIN FINO SALTO BÁSICO</h4>R$140,00 </p>
                         </section>
                         </a>
                     </div>
                     <div class="sapato2">
-                        <a href="./imagens/shoes2.png   ">
-                        <img src="./imagens/shoes2.png" alt="">
+                        <a href="../imagens/shoes2.png   ">
+                        <img src="../imagens/shoes2.png" alt="">
                         <p><h4>SCARPIN FINO SALTO BÁSICO</h4>R$140,00 </p>
                         </a>
                     </div>
                         <div class="sapato3">
-                        <a href="./imagens/shoes3.png">
-                        <img src="./imagens/shoes3.png" alt="">
+                        <a href="../imagens/shoes3.png">
+                        <img src="../imagens/shoes3.png" alt="">
                         <p><h4>SCARPIN FINO SALTO BÁSICO</h4>R$140,00 </p>
                         </a>
                     </div>
                         <div class="sapato4">
-                        <a href="./imagens/shoes4.png">
-                        <img src="./imagens/shoes4.png" alt="">
+                        <a href="../imagens/shoes4.png">
+                        <img src="../imagens/shoes4.png" alt="">
                         <p><h4>SANDÁLIA SALTO FINO</h4>R$159,00 </p>
                         </a>
                     </div>
@@ -66,8 +66,8 @@
                     <div>
                         <a class="testelink" href="">ver detalhes</a>
                     </div>
-                    <img src="./imagens/photoshoot-3.png" alt="">
-                    <img src="./imagens/photoshoot-4.png" alt="">
+                    <img src="../imagens/photoshoot-3.png" alt="">
+                    <img src="../imagens/photoshoot-4.png" alt="">
                 </div>
     
 
