ajustando os links do footer

--- a/index.html
+++ b/index.html
@@ -103,17 +103,22 @@
                 
             </section>
             <footer>
+                <div class="textofooter">
                 <img src="./imagens/logo-white.png" alt="">
-                <h3>Categorias</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rem facilis perspiciatis reiciendis magnam. 
+                </div>
+
+                <nav>
                 <ul>
+                    <h3>Categorias</h3>
                     <li><a href="">sandálias</a></li>
                     <li><a href="">botas</a></li>
                     <li><a href="">tênis</a></li>
                     <li><a href="">oxford</a></li>
                     <li><a href="">coturnos</a></li>
                 </ul>
-                <h3>institucional</h3> 
-                <ul>
+                <ul class="esquerdo">
+                    <h3>institucional</h3> 
                     <li><a href="">sobre nós</a></li>
                     <li><a href="">perguntas frequentes</a></li>
                     <li><a href="">política de privacidade</a></li>
@@ -121,6 +126,7 @@
                     <li><a href="">trabalhe conosco</a></li>
                     <li><a href="">contato</a></li>
                 </ul>
+                </nav>
             </footer>
 
         
