--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <footer>
                 <div class="textofooter">
                 <img src="./imagens/logo-white.png" alt="">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rem facilis perspiciatis reiciendis magnam. 
-                </div>
+                <p>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rem facilis perspiciatis reiciendis magnam. </p>
+            </div>
 
                 <nav>
                 <ul>
-                    <h3>Categorias</h3>
+                    <li><strong>Categorias</strong></li>
                     <li><a href="">sandálias</a></li>
                     <li><a href="">botas</a></li>
                     <li><a href="">tênis</a></li>
@@ -118,7 +118,7 @@
                     <li><a href="">coturnos</a></li>
                 </ul>
                 <ul class="esquerdo">
-                    <h3>institucional</h3> 
+                    <li><strong>institucional</strong></li>
                     <li><a href="">sobre nós</a></li>
                     <li><a href="">perguntas frequentes</a></li>
                     <li><a href="">política de privacidade</a></li>
