--- a/index.html
+++ b/index.html
@@ -98,26 +98,26 @@
                         <a class="testelink" href="">ver detalhes</a>
                     </div>
 
-                    <img class="corpo2img1" src="./imagens/photoshoot-3.png" alt="">
+                    <img src="./imagens/photoshoot-3.png" alt="">
                     <img src="./imagens/photoshoot-4.png" alt="">
                 
             </section>
             <footer>
                 <div class="textofooter">
                 <img src="./imagens/logo-white.png" alt="">
-                <p>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rem facilis perspiciatis reiciendis magnam. </p>
+                <p>   Lorem ipsum dolor sit amet<br /> consectetur adipisicing elit. Esse rem<br /> facilis perspiciatis reiciendis magnam. </p>
             </div>
 
                 <nav>
-                <ul>
+                    <ul>
                     <li><strong>Categorias</strong></li>
                     <li><a href="">sandálias</a></li>
                     <li><a href="">botas</a></li>
                     <li><a href="">tênis</a></li>
                     <li><a href="">oxford</a></li>
                     <li><a href="">coturnos</a></li>
-                </ul>
-                <ul class="esquerdo">
+                    </ul>
+                    <ul class="esquerdo">
                     <li><strong>institucional</strong></li>
                     <li><a href="">sobre nós</a></li>
                     <li><a href="">perguntas frequentes</a></li>
@@ -125,7 +125,7 @@
                     <li><a href="">rastreamento de pedidos</a></li>
                     <li><a href="">trabalhe conosco</a></li>
                     <li><a href="">contato</a></li>
-                </ul>
+                    </ul>
                 </nav>
             </footer>
 
