aplicando @media para desktop

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               
             <section class="corpo">
 
-                    <img class="imgcorpo" src="./imagens/photoshoot-1.png" alt="">
+                    <img class="imgcorpo1" src="./imagens/photoshoot-1.png" alt="">
   
-                    <img class="imgcorpo" src="./imagens/photoshoot-2.png" alt="">
+                    <img class="imgcorpo2" src="./imagens/photoshoot-2.png" alt="">
 
             </section>
             <section>
