corrigindo erros espaçamento

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <a href="./imagens/shoes4.png">
                             <img src="./imagens/shoes4.png" alt="">
                             
-                             <p> <strong>SANDÁLIA SALTO FINO</strong> <br />R$159,00 <br /><br /></p> 
+                             <p> <strong>SANDÁLIA SALTO FINO</strong> <br />R$159,00 <br /></p> 
                             
                         </a>
                     </div>
